start adding user routes

--- a/config/confing.env
+++ b/config/confing.env
@@ -6,3 +6,9 @@ GEOCODER_API_KEY=h0ta596RLh3ccJ5KFAV83A8gASGOzFrn
 JWT_SECRET=DjallelBrahmia2023FirstDeployedRestFulAPi
 JWT_EXPIRES_TIME=7d
 COOKIE_EXPIRES_TIME=1
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=25
+SMTP_USERNAME=a97f63b2dfe1bf
+SMTP_PASSWORD=dd901fb6125a7b
+SMTP_FROM_EMAIL=noreply@jobApi.com
+SMTP_FROM_NAME=Jobe admin 
