adding some functionality like apply with PDF or DOCX Document to the job

--- a/config/confing.env
+++ b/config/confing.env
@@ -12,3 +12,5 @@ SMTP_USERNAME=a97f63b2dfe1bf
 SMTP_PASSWORD=dd901fb6125a7b
 SMTP_FROM_EMAIL=noreply@jobApi.com
 SMTP_FROM_NAME=Jobe admin 
+MAX_FILE_SIZE=2000000
+UPLOAD_PATH=./public/upload
